# ontology-core

./: .gitignore  README.md  config.yaml.example  pyproject.toml
.github/instructions/: ontology-docs.instructions.md  ontology-python.instructions.md
docs/: API.md  CATALOG_FORMAT.md  INTEGRATION.md  README.md
ontology/: ONTOLOGY.md  __init__.py  cli.py  config.py
ontology/catalogs/: activity_cycle.json  attributes.json  naics.json  properties.json
ontology/entities/: __init__.py  base.py  company.py  person.py  project.py  property.py  utils.py
ontology/properties/: __init__.py  collector.py  models.py
ontology/registry/: __init__.py  catalog.py  loader.py  version.py
schemas/commercial_real_estate/: extraction.md  output.md  template.md
schemas/general/: extraction.md  output.md  template.md
schemas/litigation_finance/: diagnostic.md  funder_diagnostic.md
test/2026.04.15/: links.json  manifest.json  objects.json  ontology.json
tests/: __init__.py  conftest.py  test_build.py  test_config.py  test_entities.py  test_properties.py
