[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-core"
version = "0.1.0"
description = "Cedars Hill Group firm ontology library"
requires-python = ">=3.10"
dependencies = [
    "python-frontmatter>=1.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
ontology-collect = "ontology.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ontology*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
